change place of utils

--- a/WeatherGalaxy/Views/Home/Index.cshtml
+++ b/WeatherGalaxy/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="jumbotron">
-        <h1>Weather Galaxy</h1>
+        <h1>Weather of the Galaxy</h1>
         <p class="lead">An web application to know the weather for the next 10 years</p>
         <p><a href="/swagger/ui/index" class="btn btn-primary btn-lg">Get weather &raquo;</a></p>
 </div>
